--- a/Itihad to/css/styles.css
+++ b/Itihad to/css/styles.css
@@ -32,6 +32,7 @@ img {
 section{
     scroll-margin-top: 150px;
     margin: 5em 0 10em 0;
+    overflow-x: hidden;
 }
 
 /************ Basic typography *************/
@@ -215,10 +216,6 @@ header{
 
 
 /********************WE*************************/
-#we{
-    overflow: auto;
-}
-
 .rows{
     padding: 1em;
     margin-bottom: 3em;
@@ -246,11 +243,11 @@ header{
 }
 
 .animate{
-    animation: slide-x 2s ease-in-out forwards;
+    animation: slide-x 1.5s ease-in-out forwards;
 }
 
 .animate-reverse{
-    animation: slide-x-reverse 2s ease-in-out forwards;
+    animation: slide-x-reverse 1.5s ease-in-out forwards;
 }
 
 @keyframes slide-x{
@@ -328,6 +325,150 @@ header{
 .br{
     display: none;
 }
+
+#more{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+#more_button{
+    cursor: pointer;
+    font-size: 1.5em;
+    background: #F4F2F1;
+    border: 3px solid tomato;
+    border-radius: 10rem;
+    padding: 0.5em 1em;
+    transition: all 0.5s;
+    overflow: hidden;
+    position: relative;
+}
+
+#more_button:before {
+		content: '';
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 0;
+		height: 100%;
+        transition: all .3s;
+        border-radius: 10rem;
+		background: tomato;
+        z-index: -1;
+}
+    
+#more_button::before:hover{
+    width: 100%;
+}
+    
+#more_button:hover{
+    &:before{
+        width: 100%;
+    }
+    transform: scale(1.075);
+}
+
+/***********activities***********/
+#slider{
+    margin: 5em 0 10em 0;
+}
+
+.slide1{
+    background: url(../images/match2.jpg) no-repeat;
+    background-position: left;
+}
+
+.slide2{
+    background: url(../images/karting.jpg) no-repeat;
+    background-position: center;
+}
+
+.slide3{
+    background: url(../images/yemen.jpg) no-repeat;
+}
+
+.flexslider {
+    border: 4px solid #F4F2F1;
+}
+
+
+.slides li > div {
+	width: 100%;
+	position: relative;
+	padding-bottom: 50%;
+	background-size: cover;
+}
+
+
+.content {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	padding: 7px 10px;
+	background-color: rgba(0, 0, 0, 0.5);
+    color: rgb(240, 232, 232);
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+}
+
+.forBefore::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 2px;
+    height: 0;
+    background: #F4F2F1;
+    animation: borders 1s ease-in-out forwards;
+}
+
+@keyframes borders {
+    to{
+        height: 100%;
+    }
+}
+
+.forH2 , .forP{
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    direction: rtl;
+}
+
+.forH2{
+    width: 6em;
+    height: 5em;
+}
+
+.slideH2 , .slideP{
+    width: 100%;
+    transform: translateX(-100%);
+}
+
+.slideH2{
+    animation: startAnimation 2s ease 0.5s forwards;
+}
+
+.slideP{
+    animation: startAnimation 2s ease 2s forwards;
+}
+
+@keyframes startAnimation {
+    to{
+        transform : translateX(0);
+    }
+}
+
+.forP p{
+    line-height: 2;
+}
+
 
 
 /***************services*******************/
@@ -454,8 +595,16 @@ footer{
     .services{
         font-size: 1.4em;
     }
-}
 
+    /**********************/
+    .forH2 h2{
+        font-size: 1.5em !important;
+    }
+
+    .forP p{
+        font-size: 1em !important;
+    }
+}
 
 
 @media only screen and (max-width: 699px) {
@@ -502,10 +651,40 @@ footer{
         width: 350px;
     }
 
+    /****************/
+    .slides li > div {
+        padding-bottom: 100%;
+    }
+
+    .slide3{
+        background-position: center;
+    }
+
+    /**********/
+    .forH2 h2{
+        font-size: 1.7em;
+    }
+
+    .forP p{
+        font-size: 1.2em;
+    }
 
     /*************/
     footer{
         padding-top: 1em;
+    }
+}
+
+@media only screen and (min-width: 500px) {
+    .forH2{
+        width: 8em;
+    }
+    .forH2 h2{
+        font-size: 2em;
+    }
+
+    .forP p{
+        font-size: 1.6em;
     }
 }
 
@@ -575,6 +754,25 @@ footer{
         padding-left: 2em;
         padding-right: 1em;
     }
+
+    /************/
+    .content{
+        height: 30%;
+    }
+
+    .forH2{
+        width: 20%;
+        height: 80%;
+    }
+
+    .forH2 h2{
+        font-size: 2.3em;
+    }
+
+    .forP p{
+        font-size: 2em;
+    }
+
     
     /********************/
     #services{
@@ -624,7 +822,11 @@ footer{
     .rows:nth-child(3) img{
         margin-right: 2em;
     }
-
+    /****************/
+    .forH2{
+        width: 15%;
+        margin-right: 20%;
+    }
 
     /********************/
     #services{
