--- a/Itihad to/css/styles.css
+++ b/Itihad to/css/styles.css
@@ -390,6 +390,11 @@ header{
 
 .flexslider {
     border: 4px solid #F4F2F1;
+	pointer-events: none;
+}
+
+.flex-control-nav{
+    opacity: 0;
 }
 
 
