--- a/Itihad to/css/styles.css
+++ b/Itihad to/css/styles.css
@@ -410,7 +410,7 @@ header{
 	position: absolute;
 	bottom: 0;
 	right: 0;
-	padding: 7px 10px;
+	padding: 10px;
 	background-color: rgba(0, 0, 0, 0.5);
     color: rgb(240, 232, 232);
     width: 100%;
@@ -447,7 +447,7 @@ header{
 }
 
 .forH2{
-    width: 6em;
+    width: 8em;
     height: 5em;
 }
 
