--- a/Itihad to/css/styles.css
+++ b/Itihad to/css/styles.css
@@ -390,7 +390,7 @@ header{
 
 .flexslider {
     border: 4px solid #F4F2F1;
-	pointer-events: none;
+    pointer-events: none;
 }
 
 .flex-control-nav{
@@ -410,7 +410,7 @@ header{
 	position: absolute;
 	bottom: 0;
 	right: 0;
-	padding: 10px;
+	padding: 7px 10px;
 	background-color: rgba(0, 0, 0, 0.5);
     color: rgb(240, 232, 232);
     width: 100%;
@@ -444,11 +444,6 @@ header{
     justify-content: center;
     align-items: center;
     direction: rtl;
-}
-
-.forH2{
-    width: 8em;
-    height: 5em;
 }
 
 .slideH2 , .slideP{
@@ -600,15 +595,6 @@ footer{
     .services{
         font-size: 1.4em;
     }
-
-    /**********************/
-    .forH2 h2{
-        font-size: 1.5em !important;
-    }
-
-    .forP p{
-        font-size: 1em !important;
-    }
 }
 
 
@@ -665,31 +651,57 @@ footer{
         background-position: center;
     }
 
+    .content{
+        height: 50%;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .forBefore::before{
+        top: 90%;
+        width: 0;
+        height: 2px;
+        animation: bordersDown 1s ease-in-out forwards;
+    }
+
+    @keyframes bordersDown {
+        to{
+            width: 100%;
+        }
+    }
+
+    .forH2{
+        width: 40%;
+        height: 45%;
+    }
+
+    .slideH2{
+        transform: translateY(200%);
+    }
+
+    .slideP{
+        transform: translateY(-100%);
+    }
+
+    @keyframes startAnimation {
+        to{
+            transform : translateY(0);
+        }
+    }
+
     /**********/
+    
     .forH2 h2{
-        font-size: 1.7em;
+        font-size: 7vw;
     }
 
     .forP p{
-        font-size: 1.2em;
+        font-size: 6vw;
     }
 
     /*************/
     footer{
         padding-top: 1em;
-    }
-}
-
-@media only screen and (min-width: 500px) {
-    .forH2{
-        width: 8em;
-    }
-    .forH2 h2{
-        font-size: 2em;
-    }
-
-    .forP p{
-        font-size: 1.6em;
     }
 }
 
@@ -771,11 +783,11 @@ footer{
     }
 
     .forH2 h2{
-        font-size: 2.3em;
+        font-size: 4vw;
     }
 
     .forP p{
-        font-size: 2em;
+        font-size: 3.5vw;
     }
 
     
